systemd (208-7) UNRELEASED; urgency=medium

  * Remove pre-generated rules and unit files in debian/rules clean target.
  * Add /run/shm -> /dev/shm symlink in debian/tmpfiles.d/debian.conf
    (Closes: #674755).
  * Map init script dependencies on cryptdisks, mountall, and mountnfs
    to the corresponding systemd targets.

 -- Jon Severinsson <jon@severinsson.net>  Sun, 13 Jul 2014 18:00:00 +0200

systemd (208-6) unstable; urgency=medium

  [ Jon Severinsson ]
  * Add v208-stable patch series.
    - Update Debian patches to apply on top of v208-stable.
    - Move new manpages to libsystemd-*-dev as appropriate.

  [ Michael Biebl ]
  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Wed, 16 Jul 2014 00:44:15 +0200

systemd (208-5) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 13:41:32 +0200

systemd (208-4) experimental; urgency=medium

  * Merge changes from unstable branch.
  * Drop alternative dependency on systemd-shim in libpam-systemd. The
    systemd-shim package no longer provides an environment to run
    systemd-logind standalone. See #752939 for further details.

 -- Michael Biebl <biebl@debian.org>  Sat, 28 Jun 2014 01:22:11 +0200

systemd (208-3) experimental; urgency=medium

  * Merge changes from unstable branch.

 -- Michael Biebl <biebl@debian.org>  Wed, 25 Jun 2014 11:29:07 +0200

systemd (208-2) experimental; urgency=medium

  [ Sjoerd Simons ]
  * Don't stop a running user manager from garbage collecting the users. Fixes
    long shutdown times when using a systemd user session

  [ Michael Stapelberg ]
  * Fix bug-script: “systemctl dump” is now “systemd-analyze dump”
    (Closes: #748311)

  [ Michael Biebl ]
  * Merge changes from unstable branch.
  * Cherry-pick upstream fixes to make sd_session_get_vt() actually work.

 -- Michael Biebl <biebl@debian.org>  Tue, 24 Jun 2014 17:45:26 +0200

systemd (208-1) experimental; urgency=medium
