@@ -5,6 +5,7 @@ systemd (208-7) UNRELEASED; urgency=medium
     (Closes: #674755).
   * Map init script dependencies on cryptdisks, mountall, and mountnfs
     to the corresponding systemd targets.
+  * Map SysV runlevel S to basic.target, not sysinit.target.
 
  -- Jon Severinsson <jon@severinsson.net>  Sun, 13 Jul 2014 18:00:00 +0200
 
